--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
-    "hardhat": "^2.8.0",
-    "solidity-coverage": "^0.7.18"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2"
+    "hardhat": "^2.8.0"
   }
 }
