--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "solidity-coverage": "^0.7.18"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2"
+    "@openzeppelin/contracts": "^4.4.2",
+    "dotenv": "^16.0.0"
   }
 }
